feat: Improve status tracking
Instead of only keep track of active we now keep track of all the intervals.
This makes is more flexible toward future features.
